--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,9 @@
 		</resources>
 		<plugins>
 			<plugin>
-				<artifactId>maven-complier-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
